<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/activitytitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Login_title"
            android:textAlignment="inherit"
            android:textColor="@color/black"
            android:textSize="45dp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btntransparent"
            android:hint="@string/Login_hint_email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btntransparent"
            android:hint="@string/Login_hint_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:padding="5dp"
            android:text="@string/Login_btn"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/forgotpassbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/login_link_forgotpass"
            android:textAlignment="inherit"
            android:textSize="22dp" />
    </LinearLayout>


</LinearLayout>