<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.ForgotPass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/activitytitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/Forgot_title"
            android:textAlignment="inherit"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btntransparent"
            android:hint="@string/forgot_hint_email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="25dp" />


        <Button
            android:id="@+id/forgotpassbtnbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:padding="5dp"
            android:text="@string/forgot_hint_changepass"
            android:textSize="22dp" />


    </LinearLayout>

</LinearLayout>